[fix] projectMake
