# src/project/project.controller.js
@@ -1,11 +1,22 @@
 import { StatusCodes } from "http-status-codes";
 import HttpException from "../middlewares/errorHandler.js";
 import { bodyToTask, bodyToTaskPut } from "./dtos/project.dto.js";
-import { deleteTaskService, getFinishProjectInfoService, getLeastProjectInfoService, getPrivateProjectInfoService, getProjectInfoService, getRecentProjectInfoService, getSpecificProjectInfoService, getWorkingProjectService, projectMakeService, putTaskService, taskMakeService } from "./project.service.js";
-
+import {
+  deleteTaskService,
+  getFinishProjectInfoService,
+  getLeastProjectInfoService,
+  getPrivateProjectInfoService,
+  getProjectInfoService,
+  getRecentProjectInfoService,
+  getSpecificProjectInfoService,
+  getWorkingProjectService,
+  projectMakeService,
+  putTaskService,
+  taskMakeService,
+} from "./project.service.js";
 
 export const getProjectInfo = async (req, res, next) => {
-/* 
+  /* 
 #swagger.security = [{
     "bearerAuth": []  
   }] 
@@ -24,26 +35,25 @@ export const getProjectInfo = async (req, res, next) => {
   #swagger.responses[400] = {
     description: '잘못된 요청 형식'
 } */
-    try {
-      const { key, id } = req.user; // 쿼리에서 userKey 가져오기
-        
-      let userKey = key;
+  try {
+    const { key, id } = req.user; // 쿼리에서 userKey 가져오기
 
-        console.log(userKey);
-        const project = await getProjectInfoService(userKey);
-        
-        console.log("controller : ", project);
+    let userKey = key;
 
-        if (!project) {
-            return next(new HttpException(404, "Project not found"));
-        }
+    console.log(userKey);
+    const project = await getProjectInfoService(userKey);
 
-        return res.status(200).json({ success: true, data: project });
-    } catch (error) {
-        next(error);
+    console.log("controller : ", project);
+
+    if (!project) {
+      return next(new HttpException(404, "Project not found"));
     }
-};
 
+    return res.status(200).json({ success: true, data: project });
+  } catch (error) {
+    next(error);
+  }
+};
 
 export const getPrivateProjectInfo = async (req, res, next) => {
   /* 
@@ -65,31 +75,28 @@ export const getPrivateProjectInfo = async (req, res, next) => {
     #swagger.responses[400] = {
       description: '잘못된 요청 형식'
   } */
-      try {
-        const { key, id } = req.user; // 쿼리에서 userKey 가져오기
-          
-        let userKey = key;
-  
-          console.log(userKey);
-          const project = await getPrivateProjectInfoService(userKey);
-          
-          console.log("controller : ", project);
-  
-          if (!project) {
-              return next(new HttpException(404, "Project not found"));
-          }
-  
-          return res.status(200).json({ success: true, data: project });
-      } catch (error) {
-          next(error);
-      }
-  };
+  try {
+    const { key, id } = req.user; // 쿼리에서 userKey 가져오기
 
+    let userKey = key;
 
+    console.log(userKey);
+    const project = await getPrivateProjectInfoService(userKey);
 
+    console.log("controller : ", project);
+
+    if (!project) {
+      return next(new HttpException(404, "Project not found"));
+    }
+
+    return res.status(200).json({ success: true, data: project });
+  } catch (error) {
+    next(error);
+  }
+};
 
 export const getSpecificProjectInfo = async (req, res, next) => {
-/* 
+  /* 
     #swagger.security = [{
     "bearerAuth": []  
   }] 
@@ -117,28 +124,31 @@ export const getSpecificProjectInfo = async (req, res, next) => {
   #swagger.responses[400] = {
     description: '잘못된 요청 형식'
 } */
-    try {
-        const { key, id } = req.user;
-        const { projectKey } = req.params;
-        
-        let userKey = key;
-        
-        console.log("Router : ",userKey, projectKey);
-      
-        const findProject = await getSpecificProjectInfoService(userKey, projectKey); 
+  try {
+    const { key, id } = req.user;
+    const { projectKey } = req.params;
 
-        if(!findProject) {
-            return next(new HttpException(404, "Project not found"));
-        }
+    let userKey = key;
 
-        return res.status(200).json({ success: true, data: findProject });
-    } catch (error) {
-        return error;
+    console.log("Router : ", userKey, projectKey);
+
+    const findProject = await getSpecificProjectInfoService(
+      userKey,
+      projectKey
+    );
+
+    if (!findProject) {
+      return next(new HttpException(404, "Project not found"));
     }
+
+    return res.status(200).json({ success: true, data: findProject });
+  } catch (error) {
+    return error;
+  }
 };
 
 export const getWorkingProjectInfo = async (req, res, next) => {
-/* 
+  /* 
   #swagger.security = [{
             "bearerAuth": []
     }]
@@ -160,26 +170,24 @@ export const getWorkingProjectInfo = async (req, res, next) => {
 
   try {
     const { key, id } = req.user; // 쿼리에서 userKey 가져오기
-        
+
     let userKey = key;
 
     console.log("Router : ", userKey);
     const findProject = await getWorkingProjectService(userKey);
 
-    if(!findProject) {
+    if (!findProject) {
       return next(new HttpException(404, "Project not found"));
-  }
+    }
     return res.status(200).json({ success: true, data: findProject });
   } catch (error) {
     console.log(error);
     return error;
   }
-
 };
 
-
 export const getFinishProjectInfo = async (req, res, next) => {
-/*
+  /*
   #swagger.security = [{
             "bearerAuth": []
     }]
@@ -198,26 +206,26 @@ export const getFinishProjectInfo = async (req, res, next) => {
   #swagger.responses[400] = {
     description: '잘못된 요청 형식'
 } */
-  
-    try {
-      const { key, id } = req.user; // 쿼리에서 userKey 가져오기
-        
-      let userKey = key;
 
-      console.log("Router : ", userKey);
-      const findProject = await getFinishProjectInfoService(userKey);
-  
-      if(!findProject) {
-        return next(new HttpException(404, "Project not found"));
+  try {
+    const { key, id } = req.user; // 쿼리에서 userKey 가져오기
+
+    let userKey = key;
+
+    console.log("Router : ", userKey);
+    const findProject = await getFinishProjectInfoService(userKey);
+
+    if (!findProject) {
+      return next(new HttpException(404, "Project not found"));
     }
     return res.status(200).json({ success: true, data: findProject });
-    } catch (error) {
-      return error;
-    }
-  };
+  } catch (error) {
+    return error;
+  }
+};
 
 export const getRecentProjectInfo = async (req, res, next) => {
-/* 
+  /* 
   #swagger.security = [{
             "bearerAuth": []
     }]
@@ -236,27 +244,27 @@ export const getRecentProjectInfo = async (req, res, next) => {
   #swagger.responses[400] = {
     description: '잘못된 요청 형식'
 } */
-    
-    try {
-      const { key, id } = req.user; // 쿼리에서 userKey 가져오기
-        
-      let userKey = key;
 
-      console.log("Router : ", userKey);
-      const findProject = await getRecentProjectInfoService(userKey);
-    
-      if(!findProject) {
-          return next(new HttpException(404, "Project not found"));
-      }
-      return res.status(200).json({ success: true, data: findProject });
-      } catch (error) {
-        console.log(error);
-        return error;
-      }
-    };
+  try {
+    const { key, id } = req.user; // 쿼리에서 userKey 가져오기
+
+    let userKey = key;
+
+    console.log("Router : ", userKey);
+    const findProject = await getRecentProjectInfoService(userKey);
+
+    if (!findProject) {
+      return next(new HttpException(404, "Project not found"));
+    }
+    return res.status(200).json({ success: true, data: findProject });
+  } catch (error) {
+    console.log(error);
+    return error;
+  }
+};
 
 export const getLeastProjectInfo = async (req, res, next) => {
-/* 
+  /* 
   #swagger.security = [{
             "bearerAuth": []
     }]
@@ -275,25 +283,23 @@ export const getLeastProjectInfo = async (req, res, next) => {
   #swagger.responses[400] = {
     description: '잘못된 요청 형식'
 } */
-      
-    try {
-      const { key, id } = req.user; // 쿼리에서 userKey 가져오기
-        
-      let userKey = key;
 
-      console.log("Router : ", userKey);
-      const findProject = await getLeastProjectInfoService(userKey);
-      
-      if(!findProject) {
-        return next(new HttpException(404, "Project not found"));
-      }
-      return res.status(200).json({ success: true, data: findProject });
-    } catch (error) {
-      return error;
+  try {
+    const { key, id } = req.user; // 쿼리에서 userKey 가져오기
+
+    let userKey = key;
+
+    console.log("Router : ", userKey);
+    const findProject = await getLeastProjectInfoService(userKey);
+
+    if (!findProject) {
+      return next(new HttpException(404, "Project not found"));
     }
+    return res.status(200).json({ success: true, data: findProject });
+  } catch (error) {
+    return error;
+  }
 };
-
-
 
 export const putTaskController = async (req, res, next) => {
   /* 
@@ -342,7 +348,11 @@ export const putTaskController = async (req, res, next) => {
     const { taskKey } = req.params;
     const { key: userKey } = req.user;
 
-    const putTask = await putTaskService(bodyToTaskPut(req.body), taskKey, userKey);
+    const putTask = await putTaskService(
+      bodyToTaskPut(req.body),
+      taskKey,
+      userKey
+    );
 
     if (!putTask) {
       return next(new HttpException(404, "Task does not exist"));
@@ -354,7 +364,6 @@ export const putTaskController = async (req, res, next) => {
     return next(error);
   }
 };
-
 
 export const deleteTaskController = async (req, res, next) => {
   /* 
@@ -385,30 +394,30 @@ export const deleteTaskController = async (req, res, next) => {
   #swagger.responses[400] = {
     description: '잘못된 요청 형식'
 }  */
-  
-    try { 
-      const { key, id } = req.user;
-      const { taskKey } = req.params;
 
-      console.log("params" , key, taskKey);
+  try {
+    const { key, id } = req.user;
+    const { taskKey } = req.params;
 
-      const deleteTask = await deleteTaskService(key, taskKey);
+    console.log("params", key, taskKey);
 
-      if(!deleteTask) {
-        return next(new HttpException(404, "Task is not Exsist"));
-      }
-      return res.status(200).json({ success: true, data: deleteTask });
-    } catch(error) {
-      console.log(error);
-      return error;
+    const deleteTask = await deleteTaskService(key, taskKey);
+
+    if (!deleteTask) {
+      return next(new HttpException(404, "Task is not Exsist"));
     }
+    return res.status(200).json({ success: true, data: deleteTask });
+  } catch (error) {
+    console.log(error);
+    return error;
+  }
 };
 
 export const projectMakeController = async (req, res, next) => {
   try {
     const projectData = req.body;
-    const userKey = req.user.key;
-    const makeResult = await projectMakeService(projectData, userKey);
+    const userId = req.user.id;
+    const makeResult = await projectMakeService(projectData, userId);
     if (!makeResult) {
       return next(new HttpException(400, "잘못된 형식의 정보 전송"));
     }
